--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,48 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Homerenov91{% endblock %}</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    
+    
     <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
 </head>
 <body>
-    <!-- Navigation avec une classe personnalisée -->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-transparent">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{{ path ('app_home')}}"><img src="{{ asset('images/logo.jpg') }}" alt="Logo" class="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{{ path ('app_home')}}">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path ('app_expertises')}}">Expertises</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path ('app_realisations')}}">Réalisations</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path ('app_equipe')}}">Équipe</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path ('contact')}}">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="btn btn-login-icon" href="{{ path('app_login') }}">
-                        <i class="fas fa-user-circle"></i>
-                    </a>
+<nav class="navbar navbar-expand-lg navbar-light navbar-transparent">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{{ path('app_home') }}">
+            <img src="{{ asset('images/logo.jpg') }}" alt="Logo" class="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="{{ path('app_home') }}">Accueil</a>
                 </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_expertises') }}">Expertises</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_realisations') }}">Réalisations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_equipe') }}">Équipe</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('contact') }}">Contact</a>
+                </li>
 
-    <!-- Trait bleu sous la navigation -->
-    <div class="nav-border"></div>
+                {# Si l'utilisateur est connecté, afficher le lien vers l'espace client et le bouton "Déconnexion" #}
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_logout') }}">
+                            Déconnexion
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-login-icon" href="{{ path('user_dashboard', {id: app.user.id}) }}">
+                            <i class="fas fa-user-circle"></i>
+                        </a>
+                    </li>
+                {% else %}
+                    {# Si l'utilisateur n'est pas connecté, afficher le bouton "Connexion" #}
+                    <li class="nav-item">
+                        <a class="btn btn-login-icon" href="{{ path('app_login') }}">
+                            <i class="fas fa-user-circle"></i>
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+
+<!-- Trait bleu sous la navigation -->
+<div class="nav-border"></div>
+
 
     <!-- Contenu des pages -->
     <div class="container-fluid p-0">
@@ -116,6 +139,9 @@
     <!-- JavaScript inclus avec Webpack Encore -->
     <script src="{{ asset('build/app.js') }}"></script>
     <script src="{{ asset('build/script.js') }}"></script>
+    <!-- JS Bootstrap -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     {% endblock %}
 </body>
 </html>
